# secure-infer

./: CMakeLists.txt  README.md
libs/: README.md
src/: CMakeLists.txt
src/base/: README.md
src/gc/: README.md  gc.cpp  gc.h
src/infer/: README.md
src/utils/: dataloader.cpp  dataloader.h  utils.cpp  utils.h
train/: LeNet-CIFAR10.py  LeNet-FASHIONMNIST.py  LeNet-MNIST.py  NetworkA-FASHIONMNIST.py  NetworkA-MNIST.py  NetworkB-FASHIONMNIST.py  NetworkB-MNIST.py  NetworkC-FASHIONMNIST.py  NetworkC-MNIST.py  README.md
